--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,14 @@ dependencies:
   google_fonts: ^6.2.1
   font_awesome_flutter: ^10.8.0
   go_router: ^14.6.1
+  equatable: ^2.0.7
+  dartz: ^0.10.1
+  dio: ^5.7.0
+  flutter_bloc: ^8.1.6
+  get_it: ^8.0.2
+  awesome_dio_interceptor: ^1.3.0
+  cached_network_image: ^3.4.1
+  url_launcher: ^6.3.1
 dev_dependencies:
 
   # The "flutter_lints" package below contains a set of recommended lints to
