--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,6 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter:
     sdk: flutter
-  google_fonts: ^6.2.1
   font_awesome_flutter: ^10.8.0
   go_router: ^14.6.1
   equatable: ^2.0.7
@@ -42,6 +41,7 @@ dependencies:
   awesome_dio_interceptor: ^1.3.0
   cached_network_image: ^3.4.1
   url_launcher: ^6.3.1
+  shimmer: ^3.0.0
 dev_dependencies:
 
   # The "flutter_lints" package below contains a set of recommended lints to
